# siphon

./: .gitignore  CONTRIBUTING.md  MANIFESTO.md  README.md  agent.py  call.py  logs.txt  pyproject.toml
examples/Dental_Clinic_Receptionist/: README.md
siphon/: __init__.py
siphon/agent/: runner.py
siphon/agent/agent_components/: llm.py  stt.py  tts.py
siphon/agent/core/: entrypoint.py  voice_agent.py
siphon/agent/internal_prompts/: __init__.py  calendar_guidelines.py  call_agent.py  datetime_awareness.py  memory_aware.py
siphon/cache/: __init__.py  backend.py  service.py
siphon/config/: __init__.py  call_metadata.py  call_recording.py  call_transcription.py  data_storage.py  hangup_call.py  logging_config.py  s3_utils.py  timezone_utils.py
siphon/integrations/: __init__.py
siphon/integrations/date_time/: datetime_tool.py
siphon/integrations/google_calendar/: auth.py  calendar.py  helpers.py  models.py  operations.py  services.py
siphon/memory/: __init__.py  enrichment.py  models.py  service.py
siphon/memory/extraction/: __init__.py  base.py  llm_extractor.py  prompts.py  schemas.py  summarizer.py
siphon/memory/storage/: __init__.py  base.py  local.py  mongodb.py  redis.py  s3.py  sql.py
siphon/plugins/: __init__.py  anthropic.py  assemblyai.py  cartesia.py  cerebras.py  deepgram.py  deepseek.py  elevenlabs.py  gemini.py  google.py  groq.py  mistralai.py  ollama.py  openai.py  openrouter.py  perplexity.py  sarvam.py  together.py  xai.py
siphon/telephony/: utils.py
siphon/telephony/inbound/: dispatch.py  trunk.py
siphon/telephony/outbound/: make_call.py  trunk.py
