[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "siphon-ai"
version = "0.1.4"
description = "Build calling agents in minutes, not months. The missing infrastructure layer for AI calling. Siphon handles state, interruptions, and scaling so you can ship reliable agents in minutes, not months."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "BLACKDWARF", email = "hi@blackdwarf.in" },
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Typing :: Typed",
]
keywords = [
  "livekit",
  "livekit-agents",
  "telephony",
  "sip",
  "pstn",
  "webrtc",
  "voice-ai",
  "voice-agents",
  "ai-telephony",
  "ai-calling",
  "calling-agent",
  "contact-center",
  "call-center",
  "ivr",
  "conversational-ai",
  "speech-to-text",
  "text-to-speech",
  "realtime",
  "realtime-ai",
  "voice-to-voice",
  "telephony-api",
  "voice-communications",
  "ai-phone-systems",
  "automated-calling",
  "voice-assistant",
  "ivr-systems",
  "call-routing",
  "voice-messaging",
  "contact-center-solutions",
  "call-analytics",
  "voice-workflow",
  "telephony-automation",
  "voice-integration",
  "ai-call-processing",
  "voice-orchestration",
  "telephony-devices",
  "voice-infrastructure",
  "telephony-platform",
  "voice-api",
  "telephony-sdk",
  "voice-telephony",
  "ai-voice-systems",
  "voice-automation",
  "telephony-integrations",
  "voice-communication-platform",
  "telephony-ai-solutions",
  "voice-contact-center",
  "telephony-crm-integration",
  "ai-calling-crm-integration",
  "voice-calling-platform",
  "telephony-voice-platform",
]

# For now, declare the runtime dependencies directly. This means
# `pip install siphon-ai` (or `uv add siphon-ai`) will install
# everything the framework needs at runtime.
# You can later refine this into smaller core deps + extras.

dependencies = [
    "livekit>=0.20.0",
    "livekit-api>=0.8.0",
    "livekit-agents[turn-detector,silero]>=1.5.1",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "livekit-plugins-noise-cancellation>=0.2.0",
]

[project.optional-dependencies]
# Database backends (choose one or more)
mongodb = ["pymongo>=4.7.0", "motor>=3.5.0", "certifi>=2024.0.0"]
redis = ["redis>=5.0.0"]
postgres = ["sqlalchemy>=2.0.0", "asyncpg>=0.29.0", "psycopg2-binary>=2.9.0"]
mysql = ["sqlalchemy>=2.0.0", "aiomysql>=0.2.0", "pymysql>=1.1.0"]
all-db = ["siphon-ai[mongodb,redis,postgres,mysql]"]

# AI provider plugins (choose one or more)
openai = ["livekit-agents[openai]>=1.5.1"]
google = ["livekit-agents[google]>=1.5.1"]
anthropic = ["livekit-agents[anthropic]>=1.5.1"]
groq = ["livekit-agents[groq]>=1.5.1"]
mistralai = ["livekit-agents[mistralai]>=1.5.1"]
deepgram = ["livekit-agents[deepgram]>=1.5.1"]
assemblyai = ["livekit-agents[assemblyai]>=1.5.1"]
cartesia = ["livekit-agents[cartesia]>=1.5.1"]
sarvam = ["livekit-agents[sarvam]>=1.5.1"]
elevenlabs = ["livekit-agents[elevenlabs]>=1.5.1"]
rime = ["livekit-agents[rime]>=1.5.1"]
all-llm = ["siphon-ai[openai,google,anthropic,groq,mistralai,deepgram,assemblyai,cartesia,sarvam,elevenlabs,rime]"]

# Google Calendar integration
gcalendar = ["google-auth-oauthlib>=1.2.0", "google-auth-httplib2>=0.2.0", "google-api-python-client>=2.130.0"]

# Dev / test dependencies
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0"]
test = ["siphon-ai[dev]"]

# Everything
all = ["siphon-ai[all-db,all-llm,gcalendar]"]

[project.urls]
Homepage = "https://siphon.blackdwarf.in/"
Source = "https://github.com/blackdwarftech/siphon"

[tool.mypy]
# Silence missing import errors for optional dependencies
disable_error_code = ["import-not-found", "import-untyped", "untyped-decorator"]

# Prevent the "Any" contagion from triggering strict errors
# (These flags are normally True in strict mode)
warn_return_any = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false

[tool.hatch.build.targets.wheel]
packages = ["siphon"]
